Add about text over image

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
     {{>header }}
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, eaque minus unde inventore impedit voluptatem a repellat enim, voluptatum placeat dolores cum exercitationem quasi nihil! Fugiat sint eaque assumenda rem?</p>
+    <p>This site is created by Avinash. It uses data from mapbox.com and weatherstack.com!</p>
     <img class="portrait" src="./img/bg-11-500x500.jpg" alt="">
     </div>
     {{>footer}}
